fix problem that slider was eclipsed behind gridItem

--- a/client/main.scss
+++ b/client/main.scss
@@ -385,7 +385,7 @@ h6 {
   min-width: 400px;
 
   grid-row: 3 / 9;
-  grid-column: 1 / 10;
+  grid-column: 1 / 8;
 
 }
 
@@ -412,7 +412,7 @@ h6 {
 
   overflow: hidden;
 
-  grid-row: 2 / 6;
+  grid-row: 2 / 4;
   grid-column: 8 / 12;
 }
 
